--- a/src/pages/warehouse/warehouse.less
+++ b/src/pages/warehouse/warehouse.less
@@ -13,6 +13,7 @@
   height: 100px;
   justify-content: start;
   margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .statisticCard {
@@ -27,7 +28,6 @@
 }
 
 .calculator {
-  margin-top: 20px;
   height: fit-content;
   width: 98%;
 }
