--- a/src/pages/portfolio/overview/overiew.less
+++ b/src/pages/portfolio/overview/overiew.less
@@ -105,7 +105,8 @@
     height: 40px;
     width: 80%;
     margin: 0 auto;
-    text-align: center;
+    padding-left: 15px;
+    text-align: left;
     border: none;
     background-color: #141414;
     line-height: 40px;
