--- a/src/pages/portfolio/analysis/analysis.less
+++ b/src/pages/portfolio/analysis/analysis.less
@@ -125,6 +125,16 @@
     height: 100%;
     //overflow-x: auto;
   }
+
+  .clickable {
+    cursor: pointer;
+  }
+
+  .statistic {
+    border-color: gainsboro;
+    width: 120px;
+    margin-bottom: 10px;
+  }
 }
 
 .summaryRight {
