--- a/src/pages/capitalflow/capitalflow.less
+++ b/src/pages/capitalflow/capitalflow.less
@@ -7,7 +7,7 @@
 
 .contentArea {
   height: calc(100% - @breadCrumbHeight);
-  padding: 0 0 0 10px;
+  margin: 10px;
 
   .datePicker {
     margin-left: 5px;
@@ -42,4 +42,63 @@
   .describe {
     color: grey;
   }
+}
+
+.outlook {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  width: 100%;
+  height: 100%;
+  margin: 10px;
+
+  .box {
+    margin: 5px;
+    padding: 10px;
+    border: 1px solid #303030;
+    border-radius: 2px;
+    width: 200px;
+
+    .row {
+      display: inline-flex;
+      justify-content: space-between;
+      align-content: center;
+      align-items: center;
+      margin-top: 5px;
+      width: 100%;
+    }
+
+    .icons {
+      display: inline-flex;
+      justify-content: flex-end;
+      width: 100%;
+    }
+
+    .icon {
+      width: 20px;
+      height: 20px;
+      font-size: 18px;
+      margin-left: 10px;
+    }
+
+    .date {
+      width: 200px;
+      color: #bfbfbf;
+    }
+
+    .normal {
+      font-size: 24px;
+    }
+
+    .red {
+      color: red;
+      font-size: 24px;
+    }
+
+    .yellow {
+      color: goldenrod;
+      font-size: 24px;
+    }
+  }
+
 }
