--- a/src/pages/portfolio/analysis/analysis.less
+++ b/src/pages/portfolio/analysis/analysis.less
@@ -130,6 +130,11 @@
     cursor: pointer;
   }
 
+  .clickable > .text {
+    text-decoration: underline;
+    text-underline-offset: 3px;
+  }
+
   .statistic {
     border-color: gainsboro;
     width: 120px;
