--- a/src/pages/portfolio/analysis/analysis.less
+++ b/src/pages/portfolio/analysis/analysis.less
@@ -185,3 +185,16 @@
     padding: 0;
   }
 }
+
+.holdingPerformance {
+  .performance {
+    display: inline-flex;
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  .table {
+    margin-top: 10px;
+    padding-right: 5px;
+  }
+}
